# mini-py-nanoclaw

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_py.md  README_zh.md  SECURITY.md  docker-compose.yml  pyproject.toml  setup.sh
.claude/skills/customize/: SKILL.md
.claude/skills/debug/: SKILL.md
.claude/skills/setup/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: bump-version.yml  ci.yml  merge-forward-skills.yml  update-tokens.yml
container/: Dockerfile  build.sh
deploy/launchd/: com.nanoclaw.plist
mini_py_nanoclaw/: __init__.py  __main__.py  agent_runner.py  app.py  config.py  container_runner.py  container_runtime.py  db.py  env.py  group_queue.py  ipc.py  ipc_io.py  mcp_stdio.py  sender_allowlist.py  types.py
mini_py_nanoclaw/channels/: __init__.py  local_file.py  registry.py
mini_py_nanoclaw/setup/: __init__.py  __main__.py  groups.py  service.py
nanoclaw/: __init__.py  __main__.py  agent_runner.py  app.py  config.py  constants.py  container_runner.py  container_runtime.py  credential_proxy.py  db.py  env.py  group_folder.py  group_queue.py  ipc.py  ipc_io.py  logger.py  mcp_stdio.py  mount_security.py  router.py  sender_allowlist.py  simple_agent.py  task_scheduler.py  timezone.py  types.py
nanoclaw/channels/: __init__.py  cli_stdio.py  common.py  local_file.py  registry.py  webhook_http.py
nanoclaw/setup/: __init__.py  container.py  environment.py  groups.py  mounts.py  register.py  service.py  status.py  verify.py
scripts/: docker-smoke.sh  setup.sh
tests/: test_app_e2e.py  test_app_multi_channel.py  test_app_unit.py  test_channels_cli_stdio.py  test_channels_local_file.py  test_channels_registry.py  test_channels_webhook_http.py  test_config.py  test_container_runner.py  test_container_runtime.py  test_credential_proxy.py  test_db.py  test_env.py  test_group_folder.py  test_group_queue.py  test_ipc_io.py  test_ipc_watcher.py  test_logger.py  test_mcp_stdio.py  test_mount_security.py  test_repo_structure.py  test_router.py  test_runtime_availability.py  test_sender_allowlist.py  test_setup_scripts.py  test_setup_service.py  test_setup_status.py  test_setup_steps.py  test_simple_agent.py  test_task_scheduler.py  test_timezone.py  test_types.py
tests_py/: test_credential_proxy.py  test_group_queue.py  test_mount_security.py  test_sender_allowlist.py
(+2 files in other folders)
