[project]
name = "mini-py-nanoclaw"
version = "0.1.0"
description = "Python rewrite of NanoClaw core modules"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "croniter==2.0.7",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.4",
  "pytest-asyncio==0.23.8",
]

[tool.pytest.ini_options]
testpaths = ["tests_py"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
