[project]
name = "mini-py-nanoclaw"
version = "0.1.0"
description = "Python rewrite of NanoClaw core modules"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "croniter==2.0.7",
]

[project.scripts]
nanoclaw = "mini_py_nanoclaw.__main__:main"
nanoclaw-setup = "mini_py_nanoclaw.setup.__main__:main"

[project.optional-dependencies]
dev = [
  "build==1.3.0",
  "pytest==7.4.4",
  "pytest-asyncio==0.23.8",
  "ruff==0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F"]

[tool.setuptools.packages.find]
include = ["mini_py_nanoclaw*"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
