[project]
name = "mini-py-nanoclaw"
version = "0.1.0"
description = "Python rewrite of NanoClaw core modules"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "croniter==2.0.7",
]

[project.scripts]
nanoclaw = "nanoclaw.__main__:main"
nanoclaw-setup = "nanoclaw.setup.__main__:main"

[project.optional-dependencies]
dev = [
  "build==1.3.0",
  "pytest==7.4.4",
  "pytest-asyncio==0.23.8",
  "ruff==0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C90"]
ignore = ["E501", "UP007"]

[tool.ruff.lint.per-file-ignores]
"nanoclaw/credential_proxy.py" = ["C901"]

[tool.ruff.lint.isort]
known-first-party = ["nanoclaw"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.setuptools.packages.find]
include = ["nanoclaw*"]

[tool.setuptools.package-data]
nanoclaw = [
  "templates/groups/main/CLAUDE.md",
  "templates/groups/global/CLAUDE.md",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
